--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,31 @@
       name="Ashutosh's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Melvin Gonzalez Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
+    <!-- <meta property="og:url" content="https://ashutosh1919.github.io/" /> -->
     <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
     <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
     <meta name="author" content="Ashutosh" />
     <meta name="application-name" content="Ashutosh's PortFolio" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/icons//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/newIcon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/newIcon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/newIcon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/newIcon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icons/newIcon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/newIcon.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
+    <!-- <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png"> -->
     <meta name="theme-color" content="#000000">
 
     <!--Adsense Advertisement-->
